Closed Bug 1826687 Opened 1 year ago Closed 1 year ago

Fix Android SurfaceTexture handling with async RemoteTexture

Categories

(Core :: Graphics, defect, P2)

Unspecified
Android
defect

Tracking

()

RESOLVED FIXED
115 Branch
Tracking Status
firefox115 --- fixed

People

(Reporter: sotaro, Assigned: sotaro)

References

Details

(Whiteboard: [sp3])

Attachments

(1 file)

Android SurfaceTexture is not handled correctly with async RemoteTexture.

Assignee: nobody → sotaro.ikeda.g
OS: Unspecified → Android
Blocks: 1804233
Whiteboard: [sp3]

The severity field is not set for this bug.
:bhood, could you have a look please?

For more information, please visit auto_nag documentation.

Flags: needinfo?(bhood)
Severity: -- → S3
Flags: needinfo?(bhood)
Priority: -- → P2
Attachment #9331011 - Attachment description: WIP: Bug 1826687 - Fix Android SurfaceTexture handling with async RemoteTextureBug 1826687 - Fix Android SurfaceTexture handling with async RemoteTexture → WIP: Bug 1826687 - Fix Android SurfaceTexture handling with async RemoteTexture
Attachment #9331011 - Attachment description: WIP: Bug 1826687 - Fix Android SurfaceTexture handling with async RemoteTexture → Bug 1826687 - Fix Android SurfaceTexture handling with async RemoteTexture
Blocks: 1831811
Pushed by sikeda.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/a7a328c86d5b
Fix Android SurfaceTexture handling with async RemoteTexture r=gfx-reviewers,lsalzman
Status: NEW → RESOLVED
Closed: 1 year ago
Resolution: --- → FIXED
Target Milestone: --- → 115 Branch
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: