Bug 1826687 - Fix Android SurfaceTexture handling with async RemoteTexture r=gfx-reviewers,lsalzman

If asynchronous remote textures are used, the creation of the RendererAndroidSurfaceTextureHost could be deferred until just before WebRender uses it. Then the following functions might not be called as expected.
- RenderAndroidSurfaceTextureHost::PrepareForUse()
- RenderAndroidSurfaceTextureHost::NotifyForUse()

Then the change suppresses PrepareForUse() and NotifyForUse() calls from compositor thread when remote texture is used.

Differential Revision: https://phabricator.services.mozilla.com/D176833