gfx/webrender_bindings/RenderCompositorOGLSWGL.cpp
@@ -234,7 +234,7 @@ void RenderCompositorOGLSWGL::HandleExternalImage(
     effect.mPrimaryEffect = texturedEffect;
     mCompositor->DrawQuad(drawRect, aFrameSurface.mClipRect, effect, 1.0,
                           aFrameSurface.mTransform, drawRect);
-  } else {
+  } else if (!aExternalImage->IsWrappingAsyncRemoteTexture()) {
     MOZ_ASSERT_UNREACHABLE("unexpected to be called");
   }
 #endif
